--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,7 @@
 /* D2Coding 폰트 정의 - 코드용 */
 @font-face {
   font-family: 'D2Coding';
-  src: url('/fonts/d2coding/D2Coding-Ver1.3.2-20180524.ttf') format('truetype');
+  src: url('{{ "fonts/d2coding/D2Coding-Ver1.3.2-20180524.ttf" | relURL }}') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'D2Coding';
-  src: url('/fonts/d2coding/D2CodingBold-Ver1.3.2-20180524.ttf') format('truetype');
+  src: url('{{ "fonts/d2coding/D2CodingBold-Ver1.3.2-20180524.ttf" | relURL }}') format('truetype');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -18,7 +18,7 @@
 /* SpoqaHanSansNeo 폰트 정의 - 본문용 */
 @font-face {
   font-family: 'Spoqa Han Sans Neo';
-  src: url('/fonts/spoqa/SpoqaHanSansNeo-Thin.woff2') format('woff2');
+  src: url('{{ "fonts/spoqa/SpoqaHanSansNeo-Thin.woff2" | relURL }}') format('woff2');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: 'Spoqa Han Sans Neo';
-  src: url('/fonts/spoqa/SpoqaHanSansNeo-Light.woff2') format('woff2');
+  src: url('{{ "fonts/spoqa/SpoqaHanSansNeo-Light.woff2" | relURL }}') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -34,7 +34,7 @@
 
 @font-face {
   font-family: 'Spoqa Han Sans Neo';
-  src: url('/fonts/spoqa/SpoqaHanSansNeo-Regular.woff2') format('woff2');
+  src: url('{{ "fonts/spoqa/SpoqaHanSansNeo-Regular.woff2" | relURL }}') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -42,7 +42,7 @@
 
 @font-face {
   font-family: 'Spoqa Han Sans Neo';
-  src: url('/fonts/spoqa/SpoqaHanSansNeo-Medium.woff2') format('woff2');
+  src: url('{{ "fonts/spoqa/SpoqaHanSansNeo-Medium.woff2" | relURL }}') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -50,7 +50,7 @@
 
 @font-face {
   font-family: 'Spoqa Han Sans Neo';
-  src: url('/fonts/spoqa/SpoqaHanSansNeo-Bold.woff2') format('woff2');
+  src: url('{{ "fonts/spoqa/SpoqaHanSansNeo-Bold.woff2" | relURL }}') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -63,19 +63,10 @@
 }
 
 /* 본문 폰트 적용 */
-body {
-  font-family: var(--font-sans);
-}
+body { font-family: var(--font-sans); }
 
 /* 코드 블록 폰트 적용 */
-code,
-pre,
-kbd,
-samp,
-.code,
-.hljs {
-  font-family: var(--font-mono) !important;
-}
+code, pre, kbd, samp, .code, .hljs { font-family: var(--font-mono) !important; }
 
 /* 인라인 코드 스타일 개선 */
 :not(pre) > code {
@@ -86,19 +77,7 @@ samp,
 }
 
 /* 제목 폰트 최적화 */
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-sans);
-  font-weight: 700;
-}
+h1, h2, h3, h4, h5, h6 { font-family: var(--font-sans); font-weight: 700; }
 
-/* 코드 블록 스타일 개선 */
-pre {
-  font-family: var(--font-mono) !important;
-  line-height: 1.6;
-}
-
-/* 네비게이션 바 폰트 */
-nav,
-.navbar {
-  font-family: var(--font-sans);
-}
+/* 코드 블록 가독성 */
+pre { line-height: 1.6; }
